説明を少しわかりやすく。

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 ACCOUNT_SID={TwilioServerlessにて自動発行}
 AUTH_TOKEN={TwilioServerlessにて自動発行}
 MASTER_ACCOUNT_SID={TwilioDashboardに記載されているアカウントSID}
-SYNC_ACCOUNT_SID={SKで始まるsync→ツール→APIキーにて作成したAPIのSID}
-SYNC_AUTH_TOKEN={sync→ツール→APIキーにて作成したAPIのAUTH_TOKEN(SECRET_KEY)}
-SYNC_SERVICE_SID={ISで始まるsync→servicesにて作成したsyncのSID}
+SYNC_ACCOUNT_SID={SKで始まるSync→ツール→APIキーにて作成したAPIのSID}
+SYNC_AUTH_TOKEN={Sync→ツール→APIキーにて作成したAPIのSECRET_KEY}
+SYNC_SERVICE_SID={ISで始まるSync→servicesにて作成したSyncのSID}
 PHONE_NUMBER_A={Aに投票するための電話番号 (例) +8105012345601}
 PHONE_NUMBER_B={Bに投票するための電話番号 (例) +8105012345602}
 TITLE_A={Aのタイトル (例)チキンカレー}
